# zephyr-application

./: .gitignore  CMakeLists.txt  Makefile  prj.conf  run_test.sh
.github/workflows/: build.yml
boards/: native_posix.conf
cmake/: app_version.cmake
scripts/: bringup_vcan1.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app1/: app.cmake  main.c
src/app/src/app1/: app.cmake  main.c
src/app/version/: app_version.h.in
src/modules/: CMakeLists.txt
src/modules/VersionEnquiryManager/: CMakeLists.txt  testcase.yaml
src/modules/VersionEnquiryManager/include/VersionEnquiryManager/: VersionEnquiryManager.h
src/modules/VersionEnquiryManager/src/: VersionEnquiryManager.c
src/modules/VersionEnquiryManager/test/: VersionEnquiryManagerTest.c
